# books_with_code

./: .gitignore  Pipfile  README.md  pyproject.toml
RESTful/config/: settings.py  urls.py
RESTful/drones/: apps.py  filters.py  permissions.py  tests.py  urls.py
RESTful/drones/migrations/: 0001_initial.py  0002_auto_20200802_2208.py  0003_auto_20200802_2214.py  0004_drone_owner.py
RESTful/drones/models/: __init__.py  completition.py  drone.py  drone_category.py  pilot.py
RESTful/drones/serializers/: __init__.py  competition_serializer.py  drone_category_serializer.py  drone_serializer.py  pilot_competition_serializer.py  pilot_serializer.py  user_serializer.py
RESTful/drones/v2/: urls.py  views.py
RESTful/drones/views/: __init__.py  competition_views.py  drone_views.py  pilot_views.py
RESTful/toys/: models.py  serializers.py  urls.py  views.py
RESTful/toys/migrations/: 0001_initial.py
TDD/: was_run.py
tests/: was_run.py
